--- a/frontend/src/assets/index.css
+++ b/frontend/src/assets/index.css
@@ -1,10 +1,18 @@
+@import '/node_modules/slick-carousel/slick/slick.css';
+@import '/node_modules/slick-carousel/slick/slick-theme.css';
+
 body {
   font-family: 'Oswald', sans-serif;
-  background-color: #f5f5f5;
+  background-color: #e7e7e7;
   color: #333;
   line-height: 1.6;
 }
 
 main {
   padding: 20px;
+}
+
+.slick-prev,
+.slick-next {
+  z-index: 1;
 }
