--- a/frontend/src/assets/index.css
+++ b/frontend/src/assets/index.css
@@ -2,7 +2,7 @@
 @import '/node_modules/slick-carousel/slick/slick-theme.css';
 
 body {
-  font-family: 'Oswald', sans-serif;
+  font-family: 'Lora', Tahoma, sans-serif;
   background-color: #e7e7e7;
   color: #333;
   line-height: 1.6;
